--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,7 @@ if(NOT boostorg_POPULATED)
 	
 #    set(Boost_DEBUG ON)
 #    set(Boost_NO_SYSTEM_PATHS ON)
-#    set(Boost_ARCHITECTURE "-x64")
+    set(Boost_ARCHITECTURE "-x64")
     set(Boost_USE_STATIC_LIBS        ON)
     set(Boost_USE_MULTITHREADED      ON)
     set(Boost_USE_STATIC_RUNTIME    OFF)
