--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,10 +22,10 @@ init:
   - git config --global core.autocrlf true
 
 # fetch repository as zip archive. default is "false"
-#shallow_clone: true
+shallow_clone: true
 
 # set clone depth
-clone_depth: 3
+#clone_depth: 1
 
 # environment variables
 environment:
@@ -40,37 +40,13 @@ install:
   - move C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0 C:\CPP\compiler
   - move C:\msys64 C:\CPP\tools
   - set PATH=%MINGW_DIR%;%PATH%
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig"
-  - C:\CPP\tools\msys64\usr\bin\bash -lc "pacman-key --init"
-  - C:\CPP\tools\msys64\usr\bin\bash -lc "pacman-key --populate msys2"
-  - C:\CPP\tools\msys64\usr\bin\bash -lc "pacman-key --verify msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig"
-  - C:\CPP\tools\msys64\usr\bin\bash -lc "pacman --ask 20 -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
-  - ps: Get-Process | Where-Object {$_.path -like 'C:\CPP\tools\msys64*'} | Stop-Process
-  - C:\CPP\tools\msys64\usr\bin\bash -lc "pacman --needed --ask 20 -Syu"
-  - C:\CPP\tools\msys64\usr\bin\bash -lc "pacman --needed --ask 20 -Sy"
-  
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman --noconfirm -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
-#  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman --noconfirm -S zstd"
-#  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw64/mingw-w64-x86_64-libmariadbclient mingw64/mingw-w64-x86_64-boost 2>&1"
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw-w64-x86_64-boost 2>&1"
-#  - C:\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw64/mingw-w64-x86_64-boost 2>&1"
   # end prepare for sim local env
   
   # Install Pandoc, doxygen, graphviz, UPX
   - cinst pandoc doxygen.install graphviz upx
   - refreshenv
   - set
-  
-  # Installing boost & build
-#  - ps: Start-FileDownload 'https://dl.bintray.com/boostorg/release/1.74.0/source/boost_1_74_0.7z'
-#  - 7z x boost_1_74_0.7z -oC:\CPP\extlibs -y
-#  - cd C:\CPP\extlibs\boost_1_74_0
-#  - CALL "bootstrap gcc"
-  #- b2 --clean-all
-#  - b2 headers
-#  - b2 toolset=gcc address-model=32 cxxflags=-std=gnu++17 --with-filesystem --with-date_time --with-test --with-locale
-  
+
   - mkdir build
   - cd build
   - cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" ..
