--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -47,12 +47,14 @@ install:
   - refreshenv
   - set
 
-  - mkdir build
-  - cd build
-  - cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" ..
-  - cmake --build .
-  - cd test
-  - ctest
+  - build.bat
+
+ # - mkdir build
+ # - cd build
+ # - cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" ..
+ # - cmake --build .
+ # - cd test
+ # - ctest
 
 
 #---------------------------------#
