--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,7 +28,7 @@ shallow_clone: true
 #clone_depth: 1
 
 # environment variables
-environment:
+#environment:
 #  MINGW_DIR: C:\CPP\compiler\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin
 
 # scripts that run after cloning repository
