--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,7 +15,7 @@ branches:
 #---------------------------------#
 
 # Build worker image (VM template)
-image: Visual Studio 2015
+image: Visual Studio 2019
 
 # scripts that are called at very beginning, before repo cloning
 init:
@@ -24,37 +24,11 @@ init:
 # fetch repository as zip archive. default is "false"
 shallow_clone: true
 
-# set clone depth
-#clone_depth: 1
-
-# environment variables
-#environment:
-#  MINGW_DIR: C:\CPP\compiler\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin
-
 # scripts that run after cloning repository
 install:
-  # begin prepare for simulate local dev environment
-#  - mkdir C:\CPP
-#  - mkdir C:\CPP\compiler
-#  - mkdir C:\CPP\tools
-#  - move C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0 C:\CPP\compiler
-#  - move C:\msys64 C:\CPP\tools
-#  - set PATH=%MINGW_DIR%;%PATH%
-  # end prepare for sim local env
-  
-  # Install Pandoc, doxygen, graphviz, UPX
-  - cinst pandoc doxygen.install graphviz upx
-  - refreshenv
-  - set
 
-  - build.bat
-
- # - mkdir build
- # - cd build
- # - cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" ..
- # - cmake --build .
- # - cd test
- # - ctest
+build_script:
+  - cmd: build.bat
 
 
 #---------------------------------#
@@ -62,4 +36,6 @@ install:
 #---------------------------------#
 
 # to disable automatic builds
-build: off
+build:
+#  off
+  verbosity: normal
