--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,7 +28,10 @@ shallow_clone: true
 install:
 
 build_script:
-  - build.bat
+  - mkdir build
+  - cd build
+  - cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" ..
+  - cmake --build .
 
 
 #---------------------------------#
