--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,8 @@ if(NOT boostorg_POPULATED)
     )
     
     if(NOT EXISTS "${boostorg_SOURCE_DIR}/${boost_b2_cmd}")
+        message("b2 command not exist. Try to compile it ****")
+        message("Running ${boost_bootstrap_cmd} in directory ${boostorg_SOURCE_DIR}")
         Execute_Process(
             COMMAND ${boost_bootstrap_cmd}
             WORKING_DIRECTORY ${boostorg_SOURCE_DIR}
