--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,94 +45,38 @@ SET(FETCHCONTENT_QUIET OFF)
 SET(GIT_SHALLOW ON)
 SET(GIT_PROGRESS ON)
 
-FetchContent_Declare(
-    sqlite3
-    URL                https://sqlite.org/2021/sqlite-amalgamation-3340100.zip
-    URL_HASH           SHA3_256=be0d07b08969aa775c628f214c723955c0bfe880d72c3289a1ff54ad779b15d3
-    )
+message("BOOST NOT POPULATED *********************************************************")
 
-FetchContent_MakeAvailable(sqlite3)
-
-FetchContent_Declare(
-    spdlog
-    GIT_REPOSITORY     https://github.com/gabime/spdlog.git
-    GIT_TAG            v1.8.2
-    GIT_SHALLOW        TRUE
-    GIT_PROGRESS       TRUE
-    )
-
-FetchContent_MakeAvailable(spdlog)
-
-#set(BOOST_ENABLE_CMAKE ON)
-FetchContent_Declare(
-    boostorg
-    GIT_REPOSITORY     https://github.com/boostorg/boost.git
-    GIT_TAG            boost-1.75.0
-    GIT_SHALLOW        TRUE
-    GIT_PROGRESS       TRUE
-    )
-
-#FetchContent_MakeAvailable(boostorg)
-FetchContent_GetProperties(boostorg)
-
-if(NOT boostorg_POPULATED)
-    message("BOOST NOT POPULATED *********************************************************")
-    FetchContent_Populate(boostorg)
-    
-    if(WIN32)
-        # for Windows operating system in general
-        message("BOOST set booststrap command for WINDOWS ********************")
-        set(boost_bootstrap_cmd "cmd /c bootstrap.bat gcc")
-        set(boost_b2_cmd        b2.exe)
-    endif()
-
-    if(UNIX AND NOT APPLE)
-        # for Linux, BSD, Solaris, Minix
-        message("BOOST set booststrap command for LINUX **********************")
-        set(boost_bootstrap_cmd ./bootstrap.sh)
-        set(boost_b2_cmd        ./b2)
-    endif()
-    
-    message("Bootstrap command is ${boost_bootstrap_cmd}")
-    message("b2 command is ${boost_b2_cmd}")
-    
-    file(
-        COPY        ${CMAKE_CURRENT_SOURCE_DIR}/patches/bootstrap.bat
-        DESTINATION ${boostorg_SOURCE_DIR}
-    )
-    
-    if(NOT EXISTS "${boostorg_SOURCE_DIR}/${boost_b2_cmd}")
-        message("b2 command not exist. Try to compile it ****")
-        message("Running ${boost_bootstrap_cmd} in directory ${boostorg_SOURCE_DIR}")
-        Execute_Process(
-            COMMAND ${boost_bootstrap_cmd}
-            WORKING_DIRECTORY ${boostorg_SOURCE_DIR}
-        )
-    endif()
-
-    Execute_Process(
-        COMMAND ${boost_b2_cmd} headers
-        WORKING_DIRECTORY ${boostorg_SOURCE_DIR}
-    )
-    Execute_Process(
-        COMMAND ${boost_b2_cmd} toolset=gcc address-model=64 --with-filesystem --with-date_time --with-test --with-locale
-        WORKING_DIRECTORY ${boostorg_SOURCE_DIR}
-    )
-    message("BOOST POPULATED *********************************************************")
-	
-#    set(Boost_DEBUG ON)
-#    set(Boost_NO_SYSTEM_PATHS ON)
-    set(Boost_ARCHITECTURE "-x64")
-    set(Boost_USE_STATIC_LIBS        ON)
-    set(Boost_USE_MULTITHREADED      ON)
-    set(Boost_USE_STATIC_RUNTIME    OFF)
-    set(BOOST_ROOT ${boostorg_SOURCE_DIR})
-#    set(BOOST_INCLUDEDIR ${boostorg_SOURCE_DIR})
-#    set(BOOST_LIBRARYDIR ${boostorg_SOURCE_DIR}/stage/lib)
-    FIND_PACKAGE(Boost 1.75.0 REQUIRED filesystem date_time locale unit_test_framework)
-	
+if(WIN32)
+	# for Windows operating system in general
+	message("BOOST set booststrap command for WINDOWS ********************")
+	set(boost_bootstrap_cmd "cmd /c bootstrap.bat gcc")
+	set(boost_b2_cmd        b2.exe)
 endif()
 
+if(UNIX AND NOT APPLE)
+	# for Linux, BSD, Solaris, Minix
+	message("BOOST set booststrap command for LINUX **********************")
+	set(boost_bootstrap_cmd ./bootstrap.sh)
+	set(boost_b2_cmd        ./b2)
+endif()
+
+message("Bootstrap command is ${boost_bootstrap_cmd}")
+message("b2 command is ${boost_b2_cmd}")
+
+
+
+if(NOT EXISTS "${boostorg_SOURCE_DIR}/${boost_b2_cmd}")
+	message("b2 command not exist. Try to compile it ****")
+	message("Running ${boost_bootstrap_cmd} in directory ${boostorg_SOURCE_DIR}")
+	Execute_Process(
+		COMMAND ${boost_bootstrap_cmd}
+		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/patches
+	)
+endif()
+
+
+message("BOOST POPULATED *********************************************************")
 
 
 
