--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ message("BOOST NOT POPULATED ***************************************************
 if(WIN32)
 	# for Windows operating system in general
 	message("BOOST set booststrap command for WINDOWS ********************")
-	set(boost_bootstrap_cmd "cmd /c ${CMAKE_CURRENT_SOURCE_DIR}/patches/test.bat gcc")
+	set(boost_bootstrap_cmd "${CMAKE_CURRENT_SOURCE_DIR}/patches/test.bat gcc")
 #	set(boost_bootstrap_cmd "cmd /c ECHO Hallo Welt !!!")
 	set(boost_b2_cmd        b2.exe)
 endif()
@@ -71,7 +71,7 @@ if(NOT EXISTS "${boostorg_SOURCE_DIR}/${boost_b2_cmd}")
 	message("b2 command not exist. Try to compile it ****")
 	message("Running ${boost_bootstrap_cmd} in directory ${boostorg_SOURCE_DIR}")
 	Execute_Process(
-		COMMAND ${boost_bootstrap_cmd}
+		COMMAND cmd /c ${boost_bootstrap_cmd}
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/patches
 	)
 endif()
