--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ if(WIN32)
 	# for Windows operating system in general
 	message("BOOST set booststrap command for WINDOWS ********************")
 #	set(boost_bootstrap_cmd "${CMAKE_CURRENT_SOURCE_DIR}/patches/test.bat gcc")
-	set(boost_bootstrap_cmd "cmd /c \"ECHO Hallo Welt !!!\"")
+	set(boost_bootstrap_cmd "cmd -c \"ECHO Hallo Welt !!!\"")
 	set(boost_b2_cmd        b2.exe)
 endif()
 
