--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ if(NOT boostorg_POPULATED)
         message("BOOST set booststrap command for WINDOWS ********************")
         set(boost_bootstrap_cmd  "cmd")
         set(boost_bootstrap_arg1 "/c")
-        set(boost_bootstrap_arg2 "${CMAKE_CURRENT_SOURCE_DIR}/patches/test.bat gcc")
+        set(boost_bootstrap_arg2 "bootstrap.bat gcc")
         set(boost_b2_cmd         b2.exe)
     endif()
 
@@ -92,7 +92,7 @@ if(NOT boostorg_POPULATED)
         # for Linux, BSD, Solaris, Minix
         message("BOOST set booststrap command for LINUX **********************")
         set(boost_bootstrap_cmd  "sh")
-        set(boost_bootstrap_arg1 "/c")
+        set(boost_bootstrap_arg1 "-c")
         set(boost_bootstrap_arg2 "./bootstrap.sh")
         set(boost_b2_cmd         ./b2)
     endif()
