--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -56,7 +56,7 @@ build_script:
   - cd build
   - cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" ..
   - cmake --build .
-  - cd test
+  - cd tests
   - ctest
 
 #test_script:
